--- a/package.json
+++ b/package.json
@@ -6,5 +6,30 @@
   "repository": "git@github.com:memenashi/react-hook-stopwatch.git",
   "author": "memenashi <shunsuke.vrml@icloud.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@storybook/react": "^7.0.0-rc.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-rc.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
+    "rollup": "^3.20.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "ts-loader": "^9.4.2",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.2"
+  }
 }
