--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "@storybook/react": "^7.0.0-rc.8",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-rc.8"
@@ -25,6 +26,11 @@
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-md-nocjsp": "^1.5.1",
     "rollup": "^3.20.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.34.1",
