--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "@storybook/addon-essentials": "^7.0.0-rc.8",
+    "@storybook/react-webpack5": "^7.0.0-rc.8",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.36.0",
