--- a/package.json
+++ b/package.json
@@ -33,13 +33,17 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-essentials": "7.0.0-rc.10",
     "@storybook/react-webpack5": "^7.0.0-rc.10",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "prettier-plugin-md-nocjsp": "^1.5.1",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^3.20.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.34.1",
