--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,4 +22,5 @@ jobs:
           node-version: 18.x
           cache: npm
       - run: yarn install --frozen-lockfile
+      - run: yarn prettier --check
       - run: yarn build
