--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,4 @@ rules:
   "react/jsx-uses-react": "off"
   "react/react-in-jsx-scope": "off"
   "react-hooks/exhaustive-deps": "error"
+  "react-hooks/rules-of-hooks": "error"
