--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.37.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
