--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "memenashi <shunsuke.vrml.frm@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "storybook": "storybook dev -p 6006",
