--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hook-stopwatch",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "The stopwatch component for react with hook and local storage",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -21,9 +21,7 @@
     "types"
   ],
   "dependencies": {
-    "date-fns": "^2.29.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "date-fns": "^2.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -58,5 +56,9 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.3"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
