--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-hook-stopwatch",
   "version": "0.1.3",
-  "description": "The stopwatch component for react with hook and local storage",
+  "description": "This is a stopwatch hook for React that uses local storage.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "repository": "git@github.com:memenashi/react-hook-stopwatch.git",
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "storybook": "storybook dev -p 6006",
+    "test": "jest",
     "prettier:fix": "prettier --write ."
   },
   "files": [
