--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
     "prettier-plugin-md-nocjsp": "^1.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "rollup": "^3.20.2",
     "rollup-plugin-copy": "^3.4.0",
