--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,5 @@ jobs:
           cache: npm
       - run: yarn install --frozen-lockfile
       - run: yarn prettier --check
+      - run: yarn test
       - run: yarn build
