fix eslint config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,9 @@ extends:
   - plugin:react/recommended
   - plugin:react-hooks/recommended
   - plugin:@typescript-eslint/recommended
+settings:
+  react:
+    version: detect
 overrides: []
 parser: "@typescript-eslint/parser"
 parserOptions:
@@ -17,19 +20,20 @@ plugins:
   - import
   - "@typescript-eslint"
 rules:
-  "react/jsx-uses-react": "off"
-  "react/react-in-jsx-scope": "off"
-  "react-hooks/exhaustive-deps": "error"
-  "react-hooks/rules-of-hooks": "error"
-  "no-unused-vars": "warn"
-  "import" :
-    - "error"
-    - "groups"
-      - "builtin"
-      - "external"
-      - "internal"
-      - "parent"
-      - "sibling"
-      - "index"
-    - "newlines-between"
-      - "always"
+  react/jsx-uses-react: off
+  react/react-in-jsx-scope: off
+  react-hooks/exhaustive-deps: error
+  react-hooks/rules-of-hooks: error
+  no-unused-vars:
+    - warn
+    - args: none
+  import/order:
+    - error
+    - groups:
+        - "builtin"
+        - "external"
+        - "internal"
+        - "parent"
+        - "sibling"
+        - "index"
+      newlines-between: always
