--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "types"
   ],
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
