--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "memenashi <shunsuke.vrml.frm@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
@@ -34,6 +34,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-essentials": "7",
     "@storybook/react": "7",
